kubectl/longhorn/NetworkPolicy.yaml
# Allows vmagent to scrape metrics
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-manager-monitoring
  namespace: longhorn-system
spec:
  podSelector:
    matchLabels:
      app: longhorn-manager

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observe
          podSelector:
            matchLabels:
              app.kubernetes.io/name: vmagent
              app.kubernetes.io/instance: observe
      ports:
        - protocol: TCP
          port: 9500
